--- a/src/components/FooterApp/FooterApp.module.scss
+++ b/src/components/FooterApp/FooterApp.module.scss
@@ -7,13 +7,13 @@
   
 
   .paneluser {
-    border-radius: 10px;
+  
     display: flex;
-    background-color: rgba(255, 255, 255, 0.863);
+    background-color: rgb(255, 255, 255);
     align-items: center;
-    width: 97vw;
+    width: 100vw;
     justify-content: center;
-    margin: 10px;
+   
 
     -webkit-box-shadow: -1px 1px 15px 7px rgba(0,0,0,0.53);
   -moz-box-shadow: -1px 1px 15px 7px rgba(0,0,0,0.53);
