--- a/src/components/Common/BtnLink/BtnLink.module.scss
+++ b/src/components/Common/BtnLink/BtnLink.module.scss
@@ -1,14 +1,12 @@
 .btnlink{
 
     button{
-        background-color: rgba(88, 234, 234, 0.997);
+        background-color: rgb(246, 154, 228);
         height: 2.2rem;
         margin: 3px;
         border: 0;
         border-radius: 10px;
         width: 4.6rem;
-        -webkit-box-shadow: inset -1px 1px 39px 6px rgba(0,0,0,0.53);
-        -moz-box-shadow: inset -1px 1px 39px 6px rgba(0,0,0,0.53);
-        box-shadow: inset -1px 1px 39px 6px rgba(0,0,0,0.53);
+       
     }
 }
