--- a/src/components/Common/BtnLink/BtnLink.module.scss
+++ b/src/components/Common/BtnLink/BtnLink.module.scss
@@ -1,7 +1,8 @@
 .btnlink{
 
     button{
-        background-color: rgb(246, 154, 228);
+        background: rgb(131,58,180);
+        background: linear-gradient(0deg, rgba(131,58,180,1) 0%, rgba(255,234,239,1) 100%);
         height: 2.2rem;
         margin: 3px;
         border: 0;
