--- a/src/components/DetailProduct/DetailProduct.module.scss
+++ b/src/components/DetailProduct/DetailProduct.module.scss
@@ -4,6 +4,8 @@
   img {
     object-fit: cover;
     object-position: center center;
+    aspect-ratio: 1/1;
+    height: 28rem;
   }
 
   .product {
