--- a/src/components/Common/BtnLink/BtnLink.module.scss
+++ b/src/components/Common/BtnLink/BtnLink.module.scss
@@ -9,5 +9,9 @@
         border-radius: 10px;
         width: 4.6rem;
        
+
+        -webkit-box-shadow: -1px 1px 15px 7px rgba(0, 0, 0, 0.53);
+         -moz-box-shadow: -1px 1px 15px 7px rgba(0, 0, 0, 0.53);
+         box-shadow: 1px 1px 1px 2px rgba(0, 0, 0, 0.2);
     }
 }
