--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -34,7 +34,8 @@
       
       p {
         text-transform: uppercase;
-        
+        overflow: hidden;
+        text-overflow: ellipsis;
         text-align: center;
       }
     }
