--- a/src/components/ListCategories/ListCategories.module.scss
+++ b/src/components/ListCategories/ListCategories.module.scss
@@ -34,6 +34,7 @@
       object-fit: cover;
       object-position: center center;
       border-radius: 5px;
+      aspect-ratio: 3/4;
     }
   }
 }
