--- a/src/components/Redes/Redes.module.scss
+++ b/src/components/Redes/Redes.module.scss
@@ -1,34 +1,27 @@
 .space {
-  background: rgb(131,58,180);
-  background: linear-gradient(0deg, rgba(131,58,180,1) 0%, rgba(255,234,239,1) 78%);
+  background: rgb(131, 58, 180);
+  background: linear-gradient(
+    0deg,
+    rgba(131, 58, 180, 1) 0%,
+    rgba(255, 234, 239, 1) 78%
+  );
   position: sticky;
- 
+
   top: 0;
   width: 100%;
   z-index: 5;
   justify-content: center;
   align-items: center;
-  padding: 0.5rem;
+  padding-bottom: 0.3rem;
   border-bottom: 2px solid white;
+
  
-  h4{
-    color: rgb(245, 245, 245);
-    text-shadow: 0.1em 0.1em 0.05em #333;
-    letter-spacing: 0.1em;
+  .phone {
     
   }
 
-  .phone {
-    display: flex;
-    justify-content: center;
-  }
-  .redes {
-    display: flex;
-    justify-content: center;
-  }
   p {
-    color: rgb(0, 0, 0);
-    padding-left: 10px;
-    padding-right: 10px;
+    color: #790389;
+    font-weight: 600;
   }
 }
