--- a/src/layouts/BasicLayout/BasicLayout.module.scss
+++ b/src/layouts/BasicLayout/BasicLayout.module.scss
@@ -1,6 +1,7 @@
 .basicLayout {
   display: flex;
   text-align: center;
-  align-items: center;
+  // align-items: center;
   flex-direction: column;
+
 }
