--- a/src/components/ListCart/ListCart.module.scss
+++ b/src/components/ListCart/ListCart.module.scss
@@ -1,14 +1,13 @@
 .list {
-  padding: 0.5rem;
+  padding: 0.3rem;
   background-color: #ebebeb;
   width: 100dvw;
   .card {
     background-color: rgb(246, 245, 245);
-    box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.15),
-      -6px -6px 10px -1px rgba(255, 255, 255, 0.7);
+
     border: solid 5px white;
     display: flex;
-    margin: 0.5rem;
+    margin: 0.3rem;
     border-radius: 0.5rem;
     justify-content: space-between;
 
@@ -22,19 +21,17 @@
         position: absolute;
         top: 0;
         right: 3.5px;
-        background: none;
-        border: none;
-        cursor: pointer;
-        font-size: 20px;
-        background-color: #5252521b;
-        border-radius: 2rem;  
 
+        cursor: pointer;
+        font-size: 10px;
+        background-color: #5252521b;
+        border-radius: 0.5rem;
+        padding: 0.3rem;
         svg {
-          margin: 0px;
-          
+          margin: 0;
         }
       }
-     
+
       .name {
         max-width: 10rem;
         text-transform: uppercase;
@@ -58,7 +55,7 @@
       align-items: center;
       text-align: center;
       justify-content: center;
-      
+
       p {
         font-size: 18px;
         font-weight: 600;
@@ -72,7 +69,8 @@
       max-height: 7rem;
       object-fit: cover;
       object-position: center center;
-      border-radius: 0.5rem;
+      border-radius: 0.5rem 0 0 0.5rem;
+      aspect-ratio: 1/1;
     }
   }
 }
