--- a/src/components/ListCategories/ListCategories.module.scss
+++ b/src/components/ListCategories/ListCategories.module.scss
@@ -1,17 +1,5 @@
-.header {
-  margin: 10px;
-  padding: 8px;
-  display: flex;
-  justify-content: center;
-  background-color: rgb(226, 10, 190);
-  border-radius: 30px;
-  h5 {
-    color: rgb(62, 44, 252);
-  }
-}
-
 .content {
-  padding: 15px;
+  padding: 0.3rem;
   margin-bottom: 5rem;
   h1 {
     text-align: center;
@@ -20,20 +8,27 @@
 
   .list {
     display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    gap: 0.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
     text-align: center;
+
+    .skeleton {
+      border: solid 1px rgb(231, 231, 231);
+      border-radius: 0.5rem;
+      background-color: rgb(251, 240, 249);
+    }
 
     h2 {
       text-transform: uppercase;
       font-weight: 600;
       font-size: 2.5vh;
       color: rgb(136, 3, 172);
+      padding: 0.2rem;
     }
     img {
       object-fit: cover;
       object-position: center center;
-      border-radius: 5px;
+      border-radius: 0.5rem 0.5rem 0 0;
       aspect-ratio: 3/4;
     }
   }
