--- a/src/components/Redes/Redes.module.scss
+++ b/src/components/Redes/Redes.module.scss
@@ -1,7 +1,11 @@
 .space {
-  padding: 0.3rem;
-  background: rgb(238, 212, 255);
- 
+  padding: 0.2rem;
+  background: rgb(131, 58, 180);
+  background: linear-gradient(
+    0deg,
+    rgba(131, 58, 180, 1) 0%,
+    rgba(255, 234, 239, 1) 78%
+  );
   position: sticky;
 
   top: 0;
@@ -15,5 +19,6 @@
   p {
     color: #790389;
     font-weight: 600;
+    font-size: 14px;
   }
 }
