--- a/src/components/FooterApp/FooterApp.module.scss
+++ b/src/components/FooterApp/FooterApp.module.scss
@@ -9,9 +9,8 @@
     background-color: #ffffff;
     align-items: center;
     width: 100vw;
-    justify-content: space-between;
+    justify-content: center;
     padding: 0 5px 0 5px;
-
     -webkit-box-shadow: -1px 1px 15px 7px rgba(0, 0, 0, 0.53);
     -moz-box-shadow: -1px 1px 15px 7px rgba(0, 0, 0, 0.53);
     box-shadow: -1px 1px 15px 7px rgba(0, 0, 0, 0.53);
