--- a/src/components/Layout/TopBar/TopBar.module.scss
+++ b/src/components/Layout/TopBar/TopBar.module.scss
@@ -1,12 +1,22 @@
-.topBar {
- 
+
+.user{
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(1, 125, 30);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  font-weight: 600;
+  p{
+   color: #ffeaef;
+  }
+}
+
+.topBar { 
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: 0.5rem;
- 
+  padding: 0.5rem; 
   background-color: #ffeaef;
- 
 
   .title {   
     .name {
@@ -14,13 +24,14 @@
       font-weight: 600;
       color: rgb(239, 8, 235);
     }
+
     .ano {
       font-size: 18px;
       display: flex;
       justify-content: flex-end;
 
       p {
-        color: rgb(50, 159, 25);
+        color: rgb(1, 125, 30);
       }
       .num {
         padding-left: 5px;
