--- a/src/components/ListCategories/ListCategories.module.scss
+++ b/src/components/ListCategories/ListCategories.module.scss
@@ -1,9 +1,11 @@
 .content {
   padding: 0.5rem;
   margin-bottom: 5rem;
+
   h1 {
     text-align: center;
     margin: 10px;
+
   }
 
   .list {
@@ -24,6 +26,8 @@
       font-size: 2.5vh;
       color: rgb(136, 3, 172);
       padding: 0.2rem;
+      overflow: hidden;
+        text-overflow: ellipsis;
     }
     img {
       object-fit: cover;
