--- a/src/components/ListProducts/ListProduts.module.scss
+++ b/src/components/ListProducts/ListProduts.module.scss
@@ -1,7 +1,7 @@
-.listProduct{
+.listProduct {
   padding-top: 0rem;
   width: 100%;
-  h4{
+  h4 {
     text-transform: capitalize;
     margin: 1rem;
   }
@@ -10,20 +10,14 @@
 .list {
   padding: 0.5rem;
   display: grid;
-  gap: 0.5rem;
+  gap: 0.6rem;
+
   grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
   background-color: rgb(241, 241, 241);
 
-  button{
-    width: 100% !important;
-    background-color: #ffd814;
-    border: none;
-    color: black;
-  }
-
   &__product {
     background-color: rgb(255, 255, 255);
-    position: relative;  
+    position: relative;
     border-radius: 5px;
     .pencil {
       // position: absolute;
@@ -37,7 +31,7 @@
       // align-items: center;
       // box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
 
-       svg {
+      svg {
         color: rgb(255, 255, 255);
       }
     }
@@ -56,21 +50,52 @@
       padding: 5px;
       text-transform: uppercase;
     }
-    .price{
+    .price {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
+    }
+    .price1 {
+      display: flex;      
+      align-items: flex-end;
+      padding: 0.5rem;
 
-      
+      p {
+        font-size: 12px;
+        color: rgb(253, 56, 79);
+      }
     }
 
     h5 {
       font-size: 16px;
+      margin: 0.5rem;
     }
 
     h6 {
-      font-size: 12px;
-      padding-left: 5px;
-text-align: start;
+      font-size: 18px;
+      padding-left: 0.5rem;
+      text-align: start;
+      color: rgb(253, 56, 79);
+    }
+
+    .btns {
+      background-color: #ffd814;
+      display: flex;      
+      justify-content: space-between;
+      
+      button {
+        background-color: #ffd814;
+        border: none;
+        color: black;
+        font-size: 14px;
+        padding: 0 1px 0 5px;
+      }
+      
+      .wsp {
+        background-color: white;
+        border-top-left-radius: 50%;
+        border-bottom-left-radius: 50%;
+        padding: 0.2rem;
+      }
     }
   }
 }
